@@ -1,3 +1,12 @@
+2003-02-16  URABE  <shyouhei@YahooBB218133008108.bbtec.net>
+
+	* timidity/controls.c: Add macosx_control_mode
+
+	* libarc/arc.c: Add NeoWrd Support
+
+2003-02-16  Daisuke Aoki  <dai@sweetparty.ne.jp>
+
+	* interface/winsyn_c.c (ctl_pass_playing_list): Fasten
 
 2003-02-16  Stas Sergeev <stssppnn@yahoo.com>
 	* interfaec/server_c.c, timidity/timidity.c:
